[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trexolists"
version = "0.1.0"
description = "TrExoLiSTS - JWST Exoplanet Transit Survey Analysis Package"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.2.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyastronomy>=0.24.0",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatchling.build]
packages = ["trexolists"]
